move packages.txt to .ipol/

--- a/.ipol/Dockerfile
+++ b/.ipol/Dockerfile
@@ -2,7 +2,7 @@
 FROM registry.ipol.im/ipol:v1-py3.9
 
 # install additional debian packages
-COPY packages.txt packages.txt
+COPY .ipol/packages.txt packages.txt
 RUN apt-get update && apt-get install -y $(cat packages.txt) && rm -rf /var/lib/apt/lists/* && rm packages.txt
 
 # copy the requirements.txt and install python packages
