dockerfile: update HOME permissions

--- a/.ipol/Dockerfile
+++ b/.ipol/Dockerfile
@@ -23,6 +23,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION python
 ENV PATH $bin:$PATH
 
+# $HOME is writable by the user `ipol`, but 
 ENV HOME /home/ipol
-RUN groupadd -g 1000 ipol && useradd -m -u 1000 -g 1000 ipol -d $HOME
+# chmod 777 so that any user can use the HOME, in case the docker is run with -u 1001:1001
+RUN groupadd -g 1000 ipol && useradd -m -u 1000 -g 1000 ipol -d $HOME && chmod -R 777 $HOME
 USER ipol
